replaced various occurrences of java.nio.file.* with TruffleFile